src/test/deca/context/valid/operation-binaire-superieur-egal.deca
// Description:
//    inegalite superieur ou egal
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    1>=2;
}